[package]
name = "enpow"
license = "MIT OR Apache-2.0"
authors = ["Florian Köhler"]
description = "Generating methods for user defined enums as known from Option<T> or Result<T, E>"
keywords = ["proc-macro", "macro", "enum", "utility", "generator"]
categories = ["development-tools", "development-tools::build-utils"]
repository = "https://github.com/power-unsealed/enpow"
readme = "README.md"
version = "2.0.2"
edition = "2021"
rust-version = "1.58"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
